--- a/project/bundles/3rdparty/CMakeLists.txt
+++ b/project/bundles/3rdparty/CMakeLists.txt
@@ -140,6 +140,7 @@ add_subdirectory(ext_qt)
 add_subdirectory(ext_qtwebkit)
 add_subdirectory(ext_qtav)
 add_subdirectory(ext_kf5_frameworks)
+add_subdirectory(ext_kf6_frameworks)
 add_subdirectory(ext_marble)
 add_subdirectory(ext_libksane)
 add_subdirectory(ext_fcitx-qt)
