specify qt major version variable to compile Linux native verison of breeze-icons for Windows target

--- a/project/bundles/mxe/icon-rcc/CMakeLists.txt
+++ b/project/bundles/mxe/icon-rcc/CMakeLists.txt
@@ -22,7 +22,7 @@ ExternalProject_Add(icon-rcc
 
     PATCH_COMMAND patch -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/breeze-mxe-linux.patch
 
-    CMAKE_ARGS -DBINARY_ICONS_RESOURCE=ON -DSKIP_INSTALL_ICONS=ON
+    CMAKE_ARGS -DBINARY_ICONS_RESOURCE=ON -DSKIP_INSTALL_ICONS=ON -DQT_MAJOR_VERSION=5
 
     BUILD_IN_SOURCE 0
     INSTALL_COMMAND ""
