--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -87,7 +87,8 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED
 
 if (Qt6_FOUND)
     find_package(Qt${QT_VERSION_MAJOR} REQUIRED NO_MODULE COMPONENTS Core5Compat)
-    set(ICON_INSTALL_DIR ${CMAKE_INSTALL_DATAROOTDIR}/icons)
+    set(ICON_INSTALL_DIR     ${CMAKE_INSTALL_DATAROOTDIR}/icons)
+    set(XDG_APPS_INSTALL_DIR ${CMAKE_INSTALL_DATAROOTDIR}/applications)
 endif ()
 
 if (DISABLE_QWEB)
