--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -87,8 +87,9 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED
 
 if (Qt6_FOUND)
     find_package(Qt${QT_VERSION_MAJOR} REQUIRED NO_MODULE COMPONENTS Core5Compat)
-    set(ICON_INSTALL_DIR     ${CMAKE_INSTALL_DATAROOTDIR}/icons)
-    set(XDG_APPS_INSTALL_DIR ${CMAKE_INSTALL_DATAROOTDIR}/applications)
+    set(ICON_INSTALL_DIR      ${CMAKE_INSTALL_DATAROOTDIR}/icons)
+    set(XDG_APPS_INSTALL_DIR  ${CMAKE_INSTALL_DATAROOTDIR}/applications)
+    set(KNOTIFYRC_INSTALL_DIR ${CMAKE_INSTALL_DATAROOTDIR}/knotifications5)
 endif ()
 
 if (DISABLE_QWEB)
