--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -90,6 +90,7 @@ if (Qt6_FOUND)
     set(ICON_INSTALL_DIR      ${CMAKE_INSTALL_DATAROOTDIR}/icons)
     set(XDG_APPS_INSTALL_DIR  ${CMAKE_INSTALL_DATAROOTDIR}/applications)
     set(KNOTIFYRC_INSTALL_DIR ${CMAKE_INSTALL_DATAROOTDIR}/knotifications5)
+    set(BIN_INSTALL_DIR       ${CMAKE_INSTALL_EXECROOTDIR}/bin)
 endif ()
 
 if (DISABLE_QWEB)
