--- a/core/libs/dplugins/webservices/o2/CMakeLists.txt
+++ b/core/libs/dplugins/webservices/o2/CMakeLists.txt
@@ -30,6 +30,7 @@ endif()
 option(o2_WITH_TWITTER "Authenticate with Twitter" OFF)
 option(o2_WITH_DROPBOX "Authenticate with Dropbox" OFF)
 option(o2_WITH_GOOGLE "Authenticate with Google" OFF)
+option(o2_WITH_VIMEO "Authenticate with Vimeo" OFF)
 option(o2_WITH_FACEBOOK "Authenticate with Facebook" OFF)
 option(o2_WITH_UBER "Authenticate with Uber" OFF)
 option(o2_WITH_SKYDRIVE "Authenticate with SkyDrive" OFF)
@@ -38,9 +39,56 @@ option(o2_WITH_HUBIC "Authenticate with Hubic" OFF)
 option(o2_WITH_SPOTIFY "Authenticate with Spotify" OFF)
 option(o2_WITH_SURVEYMONKEY "Authenticate with SurveyMonkey" OFF)
 option(o2_WITH_SMUGMUG "Authenticate with SmugMug" OFF)
+option(o2_WITH_MSGRAPH "Authenticate with MSGraph" OFF)
 option(o2_WITH_KEYCHAIN "keychain store" ON)
 
 option(o2_WITH_OAUTH1 "Include OAuth1 authentication" OFF)
+
+if (o2_WITH_TWITTER)
+    set(HAVE_TWITTER_SUPPORT 1)
+endif()
+if (o2_WITH_DROPBOX)
+    set(HAVE_DROPBOX_SUPPORT 1)
+endif()
+if (o2_WITH_GOOGLE)
+    set(HAVE_GOOGLE_SUPPORT 1)
+endif()
+if (o2_WITH_FACEBOOK)
+    set(HAVE_FACEBOOK_SUPPORT 1)
+endif()
+if (o2_WITH_UBER)
+    set(HAVE_UBER_SUPPORT 1)
+endif()
+if (o2_WITH_SKYDRIVE)
+    set(HAVE_SKYDRIVE_SUPPORT 1)
+endif()
+if (o2_WITH_FLICKR)
+    set(HAVE_FLICKR_SUPPORT 1)
+endif()
+if (o2_WITH_HUBIC)
+    set(HAVE_HUBIC_SUPPORT 1)
+endif()
+if (o2_WITH_SPOTIFY)
+    set(HAVE_SPOTIFY_SUPPORT 1)
+endif()
+if (o2_WITH_SURVEYMONKEY)
+    set(HAVE_SURVEYMONKEY_SUPPORT 1)
+endif()
+if (o2_WITH_SMUGMUG)
+    set(HAVE_SMUGMUG_SUPPORT 1)
+endif()
+if (o2_WITH_MSGRAPH)
+    set(HAVE_MSGRAPH_SUPPORT 1)
+endif()
+if (o2_WITH_KEYCHAIN)
+    set(HAVE_KEYCHAIN_SUPPORT 1)
+endif()
+if (o2_WITH_OAUTH1)
+    set(HAVE_OAUTH1_SUPPORT 1)
+endif()
+
+
+
 if(o2_WITH_TWITTER OR o2_WITH_DROPBOX OR o2_WITH_FLICKR OR o2_WITH_SMUGMUG)
   set(o2_WITH_OAUTH1 ON)
 endif()
