--- a/core/libs/dplugins/webservices/CMakeLists.txt
+++ b/core/libs/dplugins/webservices/CMakeLists.txt
@@ -33,6 +33,7 @@ set(libwso2_SRCS
     o2/src/o2.cpp
     o2/src/o2reply.cpp
     o2/src/o2replyserver.cpp
+    o2/src/o0jsonresponse.h
     o2/src/o2requestor.cpp
     o2/src/o2simplecrypt.cpp
     o2/src/o0settingsstore.cpp
