--- a/core/dplugins/generic/tools/mediaserver/CMakeLists.txt
+++ b/core/dplugins/generic/tools/mediaserver/CMakeLists.txt
@@ -10,6 +10,7 @@ APPLY_COMMON_POLICIES()
 include(MacroDPlugins)
 
 include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Xml,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Network,INTERFACE_INCLUDE_DIRECTORIES>
 
