--- a/project/bundles/3rdparty/ext_kf6_frameworks/kdesrc-buildrc.cmake.in
+++ b/project/bundles/3rdparty/ext_kf6_frameworks/kdesrc-buildrc.cmake.in
@@ -8,14 +8,14 @@ global
     include-dependencies false
 
     # Install directory for KDE software
-    kdedir /usr
+    kdedir @EXTPREFIX@
 
     # Directory for downloaded source code
-    source-dir /d/kf6
+    source-dir @EXTERNALS_DOWNLOAD_DIR@/kf6
 
     # Directory to build KDE into before installing
     # relative to source-dir by default
-    build-dir /b/kf6
+    build-dir @EXTERNALS_BUILD_DIR@/kf6
 
    ## kdesrc-build sets 2 options which is used in options like make-options or set-env
     # to help manage the number of compile jobs that happen during a build:
@@ -52,28 +52,28 @@ end global
 # Common options that should be set for some KDE modules no matter how
 # kdesrc-build finds them. Do not comment these out unless you know
 # what you are doing.
-include /home/gilles/Documents/kdesrc-build/kf6-common-options-build-include
+include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf6-common-options-build-include
 
 # Refers to the qt5 file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-#include /home/gilles/Documents/kdesrc-build/qt5-build-include
+#include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kdesrc-build/qt5-build-include
 
 # Support libraries that use Qt5
-#include /home/gilles/Documents/kdesrc-build/custom-qt5-libs-build-include
+#include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/custom-qt5-libs-build-include
 
 # Refers to the kf5-frameworks file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-include /home/gilles/Documents/kdesrc-build/kf6-frameworks-build-include
+include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf6-frameworks-build-include
 
 # Refers to the kf5-workspace file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-#include /home/gilles/Documents/kdesrc-build/kf5-workspace-build-include
+#include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf5-workspace-build-include
 
 # Refers to the kf5-applications file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-include /home/gilles/Documents/kdesrc-build/kf6-applications-build-include
+include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf6-applications-build-include
 
 # Refers to the kf5-kdepim file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-#include /home/gilles/Documents/kdesrc-build/kf5-kdepim-build-include
+#include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf5-kdepim-build-include
 
