--- a/project/bundles/3rdparty/ext_kf6_frameworks/kdesrc-buildrc.cmake.in
+++ b/project/bundles/3rdparty/ext_kf6_frameworks/kdesrc-buildrc.cmake.in
@@ -75,5 +75,5 @@ include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_framewo
 
 # Refers to the kf5-kdepim file included as part of kdesrc-build. The file
 # is simply read-in at this point as if you'd typed it in yourself.
-#include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf5-kdepim-build-include
+include @CMAKE_CURRENT_BINARY_DIR@/ext_kf6_frameworks-prefix/src/ext_kf6_frameworks/kf5-kdepim-build-include
 
